removed project.html (report first draft) & added Forward to report

--- a/milestone.html
+++ b/milestone.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="sans">
-<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
