--- a/proposal.html
+++ b/proposal.html
@@ -8,7 +8,7 @@
 <body class="sans">
 <a href="./index.html">HOME</a> / <b>
 <a href="#">PROPOSAL</a>
-</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">NOTES</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
+</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./report.html">REPORT</a> / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
